inou/prp/tests/errors/duplicate_tuple_field.prp
/*
:name: duplicate_tuple_field
:type: error
:error: duplicate|already exists|already declared|field
*/

// Duplicate tuple field names should be rejected.
// Doc: ../docs/docs/pyrope/03-bundle.md `,ff = 2 // error:`

mut x = (
  ,const ff = 1
  ,const ff = 2 // locate_error_here
)
